The following Native Runtime APIs were change.
  [Incompatibe Changes]
    * The following Native Runtime APIs were change.

      -  int32_t (*get_arg_basic_type_id)(void* runtime, int32_t arg_id);
      -  int32_t (*get_arg_type_dimension)(void* runtime, int32_t arg_id);
      -  int32_t (*get_arg_type_flag)(void* runtime, int32_t arg_id);
      +  int32_t (*get_arg_basic_type_id)(void* runtime, void* arg);
      +  int32_t (*get_arg_type_dimension)(void* runtime, void* arg);
      +  int32_t (*get_arg_type_flag)(void* runtime, void* arg);

  [New Features]
    * The following Native Runtime APIs were added.
        +  void* (*get_arg)(void* runtime, void* method, int32_t arg_index);

--- a/Changes
+++ b/Changes
@@ -19,6 +19,11 @@
       void* object_basic_type_id_offset;
       void* object_type_dimension_offset;
     
+    * The following Native Runtime APIs were change.
+
+  [New Features]
+    * The following Native Runtime APIs were added.
+  
 0.989013 2023-06-26
   [New Features]
     * The following methods were added.
