--- a/Changes
+++ b/Changes
@@ -21,8 +21,16 @@
     
     * The following Native Runtime APIs were change.
 
+      -  int32_t (*get_arg_basic_type_id)(void* runtime, int32_t arg_id);
+      -  int32_t (*get_arg_type_dimension)(void* runtime, int32_t arg_id);
+      -  int32_t (*get_arg_type_flag)(void* runtime, int32_t arg_id);
+      +  int32_t (*get_arg_basic_type_id)(void* runtime, void* arg);
+      +  int32_t (*get_arg_type_dimension)(void* runtime, void* arg);
+      +  int32_t (*get_arg_type_flag)(void* runtime, void* arg);
+
   [New Features]
     * The following Native Runtime APIs were added.
+        +  void* (*get_arg)(void* runtime, void* method, int32_t arg_index);
   
 0.989013 2023-06-26
   [New Features]
