The following native APIs were removed.
  [Incompatibe Changes]
    * The following native APIs were removed.

      int32_t (*get_args_stack_length)(SPVM_ENV* env, SPVM_VALUE* stack);

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * The following native APIs were removed.
     
       void (*set_args_stack_length)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t args_length);
+      int32_t (*get_args_stack_length)(SPVM_ENV* env, SPVM_VALUE* stack);
     
 0.989014 2023-06-26
   [Bug Fix]
