The following Native APIs were removed.   [Incompatibe Changes]     * The following Native APIs were removed.
      void* init_flags;

    * The following Native Runtime APIs were removed.

      void* init_flags;

initialized member was added to spvm_runtime_basic_type

--- a/Changes
+++ b/Changes
@@ -9,8 +9,11 @@
     * The following Native APIs were removed.
     
       void* class_vars_heap
+      void* init_flags;
 
-class_vars_heap
+    * The following Native Runtime APIs were removed.
+    
+      void* init_flags;
 
     
 0.989014 2023-06-26
