--- a/Changes
+++ b/Changes
@@ -10,12 +10,12 @@
     
       void* class_vars_heap
       void* init_flags;
+      int32_t (*get_opcodes_length)(void* runtime);
 
     * The following Native Runtime APIs were removed.
     
       void* init_flags;
 
-    
 0.989014 2023-06-26
   [Bug Fix]
     * The bug that the get_field_static Native API didn't work well was fixed.
