--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@
   [Incompatibe Changes]
     * The following Native APIs were removed.
     
+  [New Features]
+    * The following Native Runtime APIs were added.
+    const char* (*get_basic_type_name)(void* runtime, int32_t basic_type_id);
+    const char* (*get_class_var_name)(void* runtime, void* class_var);
+    const char* (*get_field_name)(void* runtime, void* field);
+    const char* (*get_method_name)(void* runtime, void* method);
 
 0.989015 2023-06-27
   [Incompatibe Changes]
