--- a/Changes
+++ b/Changes
@@ -31,6 +31,8 @@
     const char* (*get_method_name)(void* runtime, void* method);
   [Compilation Error Message Improvement]
     * Complication error messages were improved.
+  [Changes]
+    * The string cancatlation optimization was removed.
 
 0.989015 2023-06-27
   [Incompatibe Changes]
