--- a/Changes
+++ b/Changes
@@ -53,6 +53,12 @@
       -  void* (*get_method_by_name)(void* runtime, int32_t basic_type_id, const char* method_name);
       +  void* (*get_method_by_name)(void* runtime, void* basic_type, const char* method_name);
 
+      -  int32_t (*get_field_basic_type_id)(void* runtime, void* field);
+      +  void* (*get_field_basic_type)(void* runtime, void* field);
+
+      -  int32_t (*get_field_current_basic_type_id)(void* runtime, void* method);
+      +  void* (*get_field_current_basic_type)(void* runtime, void* field);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
