--- a/Changes
+++ b/Changes
@@ -65,6 +65,12 @@
       -  void* (*get_field)(void* runtime, int32_t basic_type_id, int32_t field_index);
       +  void* (*get_field)(void* runtime, void* basic_type, int32_t field_index);
 
+      -  int32_t (*get_class_var_basic_type_id)(void* runtime, void* class_var);
+      +  void* (*get_class_var_basic_type)(void* runtime, void* class_var);
+
+      -  int32_t (*get_class_var_current_basic_type_id)(void* runtime, void* class_var);
+      +  void* (*get_class_var_current_basic_type)(void* runtime, void* class_var);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
