--- a/Changes
+++ b/Changes
@@ -88,6 +88,9 @@
       -  const char* (*get_basic_type_version_string)(void* runtime, int32_t basic_type_id);
       +  const char* (*get_basic_type_version_string)(void* runtime, void* basic_type);
 
+      -  int32_t (*get_basic_type_parent_id)(void* runtime, int32_t basic_type_id);
+      +  void* (*get_basic_type_parent)(void* runtime, void* basic_type);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
