--- a/Changes
+++ b/Changes
@@ -100,6 +100,12 @@
       -  int32_t (*get_basic_type_methods_length)(void* runtime, int32_t basic_type_id);
       +  int32_t (*get_basic_type_methods_length)(void* runtime, void* basic_type);
 
+      -  int32_t (*get_basic_type_methods_base)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_methods_base_v2)(void* runtime, void* basic_type);
+
+      -  int32_t (*get_basic_type_fields_length)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_fields_length)(void* runtime, void* basic_type);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
