--- a/Changes
+++ b/Changes
@@ -106,6 +106,12 @@
       -  int32_t (*get_basic_type_fields_length)(void* runtime, int32_t basic_type_id);
       +  int32_t (*get_basic_type_fields_length)(void* runtime, void* basic_type);
 
+      -  int32_t (*get_basic_type_fields_base)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_fields_base)(void* runtime, void* basic_type);
+
+      -  int32_t (*get_basic_type_is_anon)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_is_anon)(void* runtime, void* basic_type);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
