--- a/Changes
+++ b/Changes
@@ -112,6 +112,12 @@
       -  int32_t (*get_basic_type_is_anon)(void* runtime, int32_t basic_type_id);
       +  int32_t (*get_basic_type_is_anon)(void* runtime, void* basic_type);
 
+      -  const char* (*get_basic_type_module_dir)(void* runtime, int32_t basic_type_id);
+      +  const char* (*get_basic_type_module_dir)(void* runtime, void* basic_type);
+
+      -  const char* (*get_basic_type_module_rel_file)(void* runtime, int32_t basic_type_id);
+      +  const char* (*get_basic_type_module_rel_file)(void* runtime, void* basic_type);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
