--- a/Changes
+++ b/Changes
@@ -118,6 +118,9 @@
       -  const char* (*get_basic_type_module_rel_file)(void* runtime, int32_t basic_type_id);
       +  const char* (*get_basic_type_module_rel_file)(void* runtime, void* basic_type);
 
+      -  int32_t (*get_basic_type_category)(void* runtime, int32_t basic_type_id);
+      +  int32_t (*get_basic_type_category)(void* runtime, void* basic_type);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
