--- a/Changes
+++ b/Changes
@@ -121,6 +121,9 @@
       -  int32_t (*get_basic_type_category)(void* runtime, int32_t basic_type_id);
       +  int32_t (*get_basic_type_category)(void* runtime, void* basic_type);
 
+      -  const char* (*get_basic_type_name)(void* runtime, int32_t basic_type_id);
+      +  const char* (*get_basic_type_name)(void* runtime, void* basic_type);
+
 0.989016 2023-06-29
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
