--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 0.989017 2023-06-30
   [Incompatibe Changes]
+    * The following Native Runtime APIs were removed.
+      - int32_t (*get_basic_type_id_by_name)(void* runtime, const char* basic_type_name);
+  
     * The following Native APIs were change.
       -  void* (*new_pointer_object_raw)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, void* pointer);
       -  void* (*new_pointer_object)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id, void* pointer);
