The following Native APIs were added.
  [New Features]
    The following Native APIs were added.

      * void* (*get_basic_type_by_id)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id);

--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 0.989017 2023-06-30
+  [New Features]
+    The following Native APIs were added.
+    
+      * void* (*get_basic_type_by_id)(SPVM_ENV* env, SPVM_VALUE* stack, int32_t basic_type_id);
+    
   [Incompatibe Changes]
     * The following Native Runtime APIs were removed.
       - int32_t (*get_basic_type_id_by_name)(void* runtime, const char* basic_type_name);
