* The following Native Runtime APIs were changed.
      -  void* (*new_object)();
      +  void* (*new_object)(void);

    * The following Native Compiler APIs were changed.

      -  void* (*new_object)();
      +  void* (*new_object)(void);

    * The following Native Precompile APIs were changed.

      -  void* (*new_object)();
      +  void* (*new_object)(void);

    * The following Native Allocator APIs were changed.

      -  void* (*new_object)();
      +  void* (*new_object)(void);

    * The following Native String Buffer APIs were changed.

      -  void* (*new_object)();
      +  void* (*new_object)(void* allocator, int32_t capacity);

--- a/Changes
+++ b/Changes
@@ -6,6 +6,31 @@
   [Incompatibe Changes]
     * The no_compiler_api option in the SPVM::Builder::Config::Exe module was removed.
     * The no_precompile option in the SPVM::Builder::Config::Exe module was removed.
+    * The following Native Runtime APIs were changed.
+
+      -  void* (*new_object)();
+      +  void* (*new_object)(void);
+
+    * The following Native Compiler APIs were changed.
+
+      -  void* (*new_object)();
+      +  void* (*new_object)(void);
+
+    * The following Native Precompile APIs were changed.
+
+      -  void* (*new_object)();
+      +  void* (*new_object)(void);
+
+    * The following Native Allocator APIs were changed.
+
+      -  void* (*new_object)();
+      +  void* (*new_object)(void);
+
+    * The following Native String Buffer APIs were changed.
+
+      -  void* (*new_object)();
+      +  void* (*new_object)(void* allocator, int32_t capacity);
+
     
 0.989018 2023-07-03
   [Incompatibe Changes]
