--- a/Changes
+++ b/Changes
@@ -45,6 +45,9 @@
 
       -  void (*free_object)(void* string_buffer);
       +  void (*free_instance)(void* string_buffer);
+
+      -  const char* (*get_value)(void* string_buffer);
+      +  const char* (*get_string)(void* string_buffer);
     
 0.989018 2023-07-03
   [Incompatibe Changes]
