--- a/Changes
+++ b/Changes
@@ -57,6 +57,11 @@
       +  void (*build_precompile_module_source)(void* runtime, void* string_buffer, const char* module_name);
       +  void (*build_precompile_method_source)(void* runtime, void* string_buffer, const char* module_name, const char* method_name);
 
+    * The methods in the Rutnime class were changed.
+
+      -  method build_precompile_source : string ($basic_type_name : string);
+      +  method build_precompile_module_source : string ($basic_type_name : string);
+
 0.989018 2023-07-03
   [Incompatibe Changes]
     * The following Native Runtime APIs were changed.
