--- a/Changes
+++ b/Changes
@@ -57,7 +57,7 @@
       +  void (*build_precompile_module_source)(void* runtime, void* string_buffer, const char* module_name);
       +  void (*build_precompile_method_source)(void* runtime, void* string_buffer, const char* module_name, const char* method_name);
 
-    * The methods in the Rutnime class were changed.
+    * The methods in the Rutnime class were added and Native Precompile APIs were removed.
 
       -  method build_precompile_source : string ($basic_type_name : string);
       +  method build_precompile_module_source : string ($basic_type_name : string);
