--- a/Changes
+++ b/Changes
@@ -2,7 +2,10 @@
   [Incompatibe Changes]
     * The following Native APIs were removed.
       int32_t (*init_env)(SPVM_ENV* env);
-
+  [Changes]
+    * The start_file argument of the set_start_file method in the Native Compiler API was copied.
+    * The include_dir argument of the add_include_dir method in the Native Compiler API was copied.
+    
 0.989019 2023-07-04
   [Changes]
     * spvm_module_file.h and spvm_module_c were added to include and src directories.
