The following Native Compiler APIs were added.
  [New Features]
    * The following Native Compiler APIs were added.
      void (*add_module_file)(void* compiler, const char* module_name, const char* file, const char* dir, const char* rel_file, const char* content, int32_t content_length);

--- a/Changes
+++ b/Changes
@@ -5,7 +5,10 @@
   [Changes]
     * The start_file argument of the set_start_file method in the Native Compiler API was copied.
     * The include_dir argument of the add_include_dir method in the Native Compiler API was copied.
-    
+  [New Features]
+    * The following Native Compiler APIs were added.
+      void (*add_module_file)(void* compiler, const char* module_name, const char* file, const char* dir, const char* rel_file, const char* content, int32_t content_length);
+  
 0.989019 2023-07-04
   [Changes]
     * spvm_module_file.h and spvm_module_c were added to include and src directories.
