The following Native Compiler APIs were added.
  [New Features]
    * The following Native Compiler APIs were added.

      void* (*get_module_file)(void* compiler, const char* module_name);

--- a/Changes
+++ b/Changes
@@ -7,7 +7,9 @@
     * The include_dir argument of the add_include_dir method in the Native Compiler API was copied.
   [New Features]
     * The following Native Compiler APIs were added.
-      void (*add_module_file)(void* compiler, const char* module_name, const char* file, const char* dir, const char* rel_file, const char* content, int32_t content_length);
+    
+      void* (*get_module_file)(void* compiler, const char* module_name);
+      void (*add_module_file)(void* compiler, const char* module_name, void* module_file);
     
     * SPVM Module File Native APIs were added.
   
