--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
   [Incompatibe Changes]
     * The following Native APIs were removed.
       int32_t (*init_env)(SPVM_ENV* env);
+    * The following methods in the Runtime were removed.
+     
+     method get_runtime_codes : int[] ();
+
   [Changes]
     * The start_file argument of the set_start_file method in the Native Compiler API was copied.
     * The include_dir argument of the add_include_dir method in the Native Compiler API was copied.
