--- a/Changes
+++ b/Changes
@@ -10,6 +10,9 @@
      
       method get_runtime_codes : int[] ();
 
+    * The following Native Compiler APIs were removed.
+      -  int32_t* (*create_runtime_codes)(void* compiler, void* allocator);
+
   [Changes]
     * The start_file argument of the set_start_file method in the Native Compiler API was copied.
     * The include_dir argument of the add_include_dir method in the Native Compiler API was copied.
