--- a/Changes
+++ b/Changes
@@ -9,6 +9,11 @@
       - void (*build)(void* runtime, int32_t* runtime_codes);
       - void* (*get_allocator)(void* runtime);
       - int32_t* (*get_opcodes)(void* runtime);
+      -  int32_t (*get_method_opcodes_base)(void* runtime, void* method);
+      -  int32_t (*get_method_args_base)(void* runtime, void* method);
+      -  int32_t (*get_basic_type_fields_base)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_methods_base)(void* runtime, void* basic_type);
+      -  int32_t (*get_basic_type_class_vars_base)(void* runtime, void* basic_type);
     
     * The following methods in the Runtime were removed.
      
