--- a/Changes
+++ b/Changes
@@ -15,6 +15,24 @@
       -  int32_t (*get_basic_type_methods_base)(void* runtime, void* basic_type);
       -  int32_t (*get_basic_type_class_vars_base)(void* runtime, void* basic_type);
     
+    * The following Native Runtime APIs were renamed.
+      -  int32_t (*get_method_call_stack_byte_vars_length)(void* runtime, void* method);
+      -  int32_t (*get_method_call_stack_short_vars_length)(void* runtime, void* method);
+      -  int32_t (*get_method_call_stack_int_vars_length)(void* runtime, void* method);
+      -  int32_t (*get_method_call_stack_long_vars_length)(void* runtime, void* method);
+      -  int32_t (*get_method_call_stack_float_vars_length)(void* runtime, void* method);
+      -  int32_t (*get_method_call_stack_double_vars_length)(void* runtime, void* method);
+      -  int32_t (*get_method_call_stack_object_vars_length)(void* runtime, void* method);
+      -  int32_t (*get_method_call_stack_ref_vars_length)(void* runtime, void* method);
+      +  int32_t (*get_method_byte_vars_width)(void* runtime, void* method);
+      +  int32_t (*get_method_short_vars_width)(void* runtime, void* method);
+      +  int32_t (*get_method_int_vars_width)(void* runtime, void* method);
+      +  int32_t (*get_method_long_vars_width)(void* runtime, void* method);
+      +  int32_t (*get_method_float_vars_width)(void* runtime, void* method);
+      +  int32_t (*get_method_double_vars_width)(void* runtime, void* method);
+      +  int32_t (*get_method_object_vars_width)(void* runtime, void* method);
+      +  int32_t (*get_method_ref_vars_width)(void* runtime, void* method);
+
     * The following methods in the Runtime were removed.
      
       method get_runtime_codes : int[] ();
